# makerbeam-botics

./: .gitattributes  .gitignore  ARCHITECTURE.md  BRAND.md  CLAUDE.md  Dockerfile  README.md  advancedDrawingFeature.MD  generate.py  lookup.py  nginx.conf  package-lock.json  package.json  pyproject.toml  styling-guide.md  tailwind.config.js  tsconfig.json  vitest.config.ts  wrangler.jsonc
designs/: kilnMold.scad  kilnMold.stl  kilnMold2.scad  makerbeam.scad  microwaveKilnMold.scad  motor_mount.scad  playingAround.scad  servo_mount.scad
docs/: adding-nodes.md
features/: F-001-universal-expression-editor.md  F-002-scoped-sub-editor-preview.md  F-003-preview-panel-enhancements.md  F-004-halt-flow-rendering.md  F-005-keyboard-navigation.md  F-006-tab-type-indicators.md  FEATURES.md  design-guidelines.md
makerbeam_botics/: __init__.py  openscad_tools.py  server.py
output/DS3225_inline_mb15/: DS3225_inline_mb15.scad
output/HS-422_bracket_mb10/: HS-422_bracket_mb10.scad
output/MG996R_side_mb15/: MG996R_side_mb15.scad
parts_db/: makerbeam.json  servos.json
plans/: brand-identity.md  halt-flow-indicator.md  hot-key-expansion.md  icons-in-tab-editor.md  if-workflow.md  preview-camera-state.md  preview-in-sub-editor.md  refine-expression-editor.md
public/: _headers
scad/: makerbeam_slot.scad  servo_body.scad  servo_mount.scad
scripts/: download-bosl2.ts
src/: App.tsx  SketchApp.tsx  index.css  main.tsx
src/codegen/: index.ts  (+1 more)
tests/: test_openscad_tools.py  test_server.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+307 files in other folders)
