[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makerbeam-botics"
version = "0.1.0"
description = "MCP server for designing MakerBeam parts with Claude and OpenSCAD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.0",
]

[project.scripts]
makerbeam-botics = "makerbeam_botics.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
